# workouts

./: Cargo.toml  config.json  design_doc.md  exercises.json  injured_workout.json  injured_workout_2.json  injured_workout_cdmx.json  llm_gen_workout.json
examples/: as_ref.rs  command.rs  os_test.rs  tts_playground.rs  tuples_to_json.rs
src/: args.rs  generate_workout.rs  main.rs  models.rs  run_workout.rs  tts.rs  workout.rs
