[package]
name = "workout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.10.0"
indicatif = "0.17.6"
rand = "0.8.5"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
strfmt = "0.2.4"
tts = "0.25.5"
